--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blueprintjs/core": "^6.2.1",
+    "@blueprintjs/icons": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -19,9 +22,11 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "prettier": "^3.6.2",
     "vite": "^6.2.0"
   }
 }
