--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blueprintjs/core": "^6.2.1",
-    "@blueprintjs/icons": "^6.1.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "lucide-react": "^0.542.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.12",
+    "vite-plugin-glsl": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
